# stardew-mod-manager

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.codex/environments/: environment.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: windows-portable-baseline.yml
docs/: 03-stage-plan.md  05-ai-audit-brief.md  06-private-testing-guide.md  README.md
docs/internal/: 01-mvp-prd.md  02-architecture-v1.md  03-stage-plan.md  04-repository-structure.md  05-ai-audit-brief.md  README.md
packaging/: pyi_rth_qt_paths.py  sdvmm_windows_portable.spec
scripts/: build_windows_portable.py
src/sdvmm/: __init__.py
src/sdvmm/app/: __init__.py  inventory_presenter.py  main.py  paths.py  shell_service.py
src/sdvmm/domain/: __init__.py  models.py  nexus_codes.py  remote_requirement_codes.py  smapi_codes.py  smapi_log_codes.py
src/sdvmm/services/: __init__.py  app_state_store.py  app_update.py  archive_manager.py  downloads_intake.py  game_launcher.py  mod_scanner.py  package_inspector.py  remote_requirements.py  sandbox_installer.py  smapi_log.py  smapi_update.py  update_metadata.py
src/sdvmm/ui/: archive_tab_surface.py  bottom_details_region.py  (+7 more)
tests/unit/: test_app_main.py  test_app_shell_service.py  test_app_state_store.py  test_app_update.py  test_downloads_intake.py  test_game_launcher.py  test_inventory_presenter.py  test_main_window_gui_regression.py  test_mod_scanner.py  test_package_inspector.py  test_remote_requirements.py  test_smapi_log.py  test_smapi_update.py  test_update_metadata.py
