[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stardew-mod-manager"
version = "0.2.1"
description = "Local-first Stardew Valley mod workflow manager with sandbox-safe install, recovery, and dev-loop promotion flows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["PySide6>=6.7"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
build = ["PyInstaller>=6.0"]

[project.scripts]
sdvmm-scan = "sdvmm.cli:main"
sdvmm-ui = "sdvmm.app.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
