[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stardew-mod-manager"
version = "1.1.0"
description = "Local-first Stardew Valley mod workflow manager with sandbox-safe install, recovery, and dev-loop promotion flows"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = ["PySide6>=6.7"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
build = ["PyInstaller>=6.0"]

[project.scripts]
sdvmm-scan = "sdvmm.cli:main"
sdvmm-ui = "sdvmm.app.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
